Allow specifying multiple libraries and filters