@@ -51,6 +51,7 @@ class JextractPlugin implements Plugin<Project> {
 
             // We need to add the foreign module, so the compiler sees its classes
             project.compileJava.options.compilerArgs += [ '--add-modules', 'jdk.incubator.foreign' ]
+            project.compileTestJava.options.compilerArgs += [ '--add-modules', 'jdk.incubator.foreign' ]
 
             // The java compiler should only be invoked after
             // jextract generated its source files
